--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.60.0",
     "react-router-dom": "^7.6.3",
+    "recharts": "^3.1.0",
     "zod": "^3.25.75"
   },
   "devDependencies": {
